--- a/storm-ui/Dockerfile
+++ b/storm-ui/Dockerfile
@@ -1,5 +1,5 @@
-FROM wurstmeister/storm:0.9.4
-MAINTAINER Wurstmeister
+FROM precisionhawk/storm:0.9.5
+MAINTAINER PrecisionHawk
 RUN /usr/bin/config-supervisord.sh ui
 
 EXPOSE 8080
